--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.0.0",
-		"@sveltejs/kit": "^2.0.0",
+		"@sveltejs/kit": "^2.5.18",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@tailwindcss/typography": "^0.5.13",
 		"autoprefixer": "^10.4.19",
@@ -24,17 +24,23 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@googleapis/calendar": "^9.7.9",
 		"@internationalized/date": "^3.5.5",
 		"@supabase/supabase-js": "^2.44.4",
-		"bits-ui": "^0.21.12",
+		"@sveltejs/adapter-node": "^5.2.0",
+		"bits-ui": "^0.21.13",
 		"clsx": "^2.1.1",
+		"dotenv": "^16.4.5",
 		"formsnap": "^1.0.1",
+		"googleapis": "^143.0.0",
+		"ical-generator": "^8.0.0",
 		"isomorphic-dompurify": "^2.14.0",
 		"lucide-svelte": "^0.416.0",
 		"marked": "^13.0.2",
 		"sveltekit-superforms": "^2.16.1",
 		"tailwind-merge": "^2.4.0",
 		"tailwind-variants": "^0.2.1",
+		"tsdav": "^2.1.1",
 		"zod": "^3.23.8"
 	}
 }
