--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@sveltejs/kit": "^2.5.18",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@tailwindcss/typography": "^0.5.13",
+		"@types/three": "^0.168.0",
 		"autoprefixer": "^10.4.19",
 		"postcss": "^8.4.38",
 		"svelte": "^4.2.7",
@@ -24,10 +25,19 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@dimforge/rapier3d-compat": "^0.14.0",
 		"@googleapis/calendar": "^9.7.9",
 		"@internationalized/date": "^3.5.5",
 		"@supabase/supabase-js": "^2.44.4",
 		"@sveltejs/adapter-node": "^5.2.0",
+		"@theatre/core": "^0.7.2",
+		"@theatre/studio": "^0.7.2",
+		"@threlte/core": "^7.3.1",
+		"@threlte/extras": "^8.11.5",
+		"@threlte/flex": "^1.0.3",
+		"@threlte/rapier": "^2.0.1",
+		"@threlte/theatre": "^2.1.8",
+		"@threlte/xr": "^0.1.4",
 		"bits-ui": "^0.21.13",
 		"clsx": "^2.1.1",
 		"dotenv": "^16.4.5",
@@ -40,6 +50,7 @@
 		"sveltekit-superforms": "^2.16.1",
 		"tailwind-merge": "^2.4.0",
 		"tailwind-variants": "^0.2.1",
+		"three": "^0.168.0",
 		"tsdav": "^2.1.1",
 		"zod": "^3.23.8"
 	}
