--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 		"isomorphic-dompurify": "^2.14.0",
 		"lucide-svelte": "^0.416.0",
 		"marked": "^13.0.2",
+		"nodemailer": "^6.9.15",
 		"sveltekit-superforms": "^2.16.1",
 		"tailwind-merge": "^2.4.0",
 		"tailwind-variants": "^0.2.1",
