feat: Add portfolio components, testing infrastructure, and project data
- Create complete portfolio component architecture with reusable design system
- Add Playwright E2E testing configuration and comprehensive test suite
- Implement Whispera project data with real screenshots and technical details
- Add Badge UI component for tech stack display
- Update projects routes with hardcoded data instead of Supabase
- Configure package.json with E2E test scripts
- Add Playwright reports to gitignore for clean repository

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,8 @@ Thumbs.db
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
 .aider*
+
+# Playwright
+test-results/
+playwright-report/
+playwright/.cache/
