--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@aws-sdk/client-s3": "^3.873.0",
 		"@dimforge/rapier3d-compat": "^0.14.0",
 		"@googleapis/calendar": "^9.7.9",
 		"@internationalized/date": "^3.5.5",
