--- a/package.json
+++ b/package.json
@@ -47,7 +47,9 @@
 		"formsnap": "^1.0.1",
 		"googleapis": "^143.0.0",
 		"ical-generator": "^8.0.0",
+		"isomorphic-dompurify": "^2.31.0",
 		"lucide-svelte": "^0.416.0",
+		"marked": "^17.0.0",
 		"nodemailer": "^6.9.15",
 		"sveltekit-superforms": "^2.16.1",
 		"tailwind-merge": "^2.4.0",
