--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 	},
 	"dependencies": {
 		"@aws-sdk/client-s3": "^3.873.0",
+		"@aws-sdk/s3-request-presigner": "^3.980.0",
 		"@dimforge/rapier3d-compat": "^0.14.0",
 		"@googleapis/calendar": "^9.7.9",
 		"@internationalized/date": "^3.5.5",
